# lib6502

./: .gitattributes  .gitignore  AGENTS.md  BUG_FIX_SUMMARY.md  CLAUDE.md  Cargo.toml  DECIMAL_MODE_BUG.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  prompt.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  deploy-demo.yml
.specify/memory/: constitution.md
c64-demo/: c64.js  index.html  style.css
c64-demo/components/: sid-audio-processor.js
c64-emu/: Cargo.toml
c64-emu/src/: lib.rs  wasm.rs
c64-emu/src/devices/: cia.rs  color_ram.rs  mod.rs  port_6510.rs  sid.rs  vic_ii.rs
c64-emu/src/system/: c64_memory.rs  c64_system.rs  disk_1541.rs  iec_bus.rs  joystick.rs  keyboard.rs  mod.rs  savestate.rs
c64-emu/tests/: basic_boot_test.rs
demo/: app.js  index.html  package-lock.json  package.json  styles.css  test-wasm.html
demo/components/: codemirror-entry.js  controls.js  editor.js  error.js  examples.js  flags.js  memory.js  registers.js  terminal.js
demo/examples/: counter.asm  fibonacci.asm  (+5 more)
docs/: ADVANCED_TESTING.md  ASSEMBLER_DISASSEMBLER_ROUNDTRIP.md  KLAUS_FUNCTIONAL_TEST.md
examples/: bench_lexer.rs  constants.rs  interrupt_device.rs  memory_mapped_system.rs  simple_asm.rs  simple_disasm.rs  simple_ram.rs  syntax_highlighter.rs  uart_echo.rs  wasm_terminal.rs
fuzz/: Cargo.toml
specs/: 002-assembler-variables.md
src/: addressing.rs  assembler.rs  cpu.rs  disassembler.rs  lib.rs  memory.rs  opcodes.rs
tests/: adc_test.rs  and_test.rs  asl_test.rs  assembler_directives_test.rs  assembler_new_features_test.rs  assembler_tests.rs  bcc_test.rs  bcs_test.rs  beq_test.rs  bit_test.rs  bmi_test.rs  bne_test.rs  bpl_test.rs  brk_test.rs  bvc_test.rs  bvs_test.rs  clc_test.rs  cld_test.rs  cli_test.rs  clv_test.rs  cmp_test.rs  cpu_init_test.rs  cpx_test.rs  cpy_test.rs  dec_test.rs  demo_examples_test.rs  dex_test.rs  dey_test.rs  disassembler_tests.rs  eor_test.rs  execute_loop_test.rs  functional_assembler_disassembler.rs  functional_klaus.rs  inc_test.rs  interrupt_test.rs  inx_test.rs  iny_test.rs  jmp_test.rs  jsr_test.rs  kani_proofs.rs  (+41 more)
(+129 files in other folders)
