[package]
name = "cpu6502"
version = "0.1.0"
edition = "2021"
authors = ["6502 Emulator Contributors"]
description = "Cycle-accurate NMOS 6502 CPU emulator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/6502"
readme = "README.md"

[lib]
name = "cpu6502"
path = "src/lib.rs"

[dependencies]
# No dependencies - core module is dependency-free

[dev-dependencies]
# Use standard Rust test framework
