[package]
name = "lib6502"
version = "0.1.0"
edition = "2021"
authors = ["6502 Emulator Contributors"]
description = "Cycle-accurate NMOS 6502 CPU emulator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/6502"
readme = "README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "lib6502"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# No dependencies - core module is dependency-free
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
# Use standard Rust test framework

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]
