[package]
name = "c64-emu"
version = "0.1.0"
edition = "2021"
authors = ["Greg Bell"]
description = "A Commodore 64 emulator built on lib6502, running in the browser via WebAssembly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gregbell/lib6502"
readme = "README.md"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "c64_emu"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core 6502 CPU emulator
lib6502 = { path = ".." }

# WASM bindings (optional, enabled with "wasm" feature)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[dev-dependencies]
# Use standard Rust test framework

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "lib6502/wasm"]
